attempt to fix height on mobile browsers

--- a/css/styles.css
+++ b/css/styles.css
@@ -29,9 +29,7 @@ body {
   #game-container {
     display: none;
     position: relative;
-    width: 100%;
-    min-height: 100vh;
-    height: 100%;
+    height:100vh;
     overflow: hidden;
   }
   .background-container {
